Fix POM generation & add symlink to java source