@@ -4,6 +4,10 @@ import java.io.File;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.Serializable;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.file.StandardOpenOption;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -260,7 +264,9 @@ public class MavenConfigurationService implements Serializable {
 	private void generatePom(String message, String repositoryCode) {
 		
 		GitRepository repository = gitRepositoryService.findByCode(repositoryCode);
-		
+		File gitRepo = GitHelper.getRepositoryDir(currentUser.get(), repositoryCode);
+		Paths.get(gitRepo.getPath(), "facets", "maven").toFile().mkdirs();
+
 		log.debug("Generating pom.xml file");
 
 		Model model = new Model();
@@ -270,7 +276,33 @@ public class MavenConfigurationService implements Serializable {
 		model.setModelVersion("4.0.0");
 		
 		model.setBuild(new Build());
-		model.getBuild().setSourceDirectory("../java");
+		
+		try {
+			// Create symlink for java folder
+			Path javaDir = Paths.get(gitRepo.getPath(), "facets", "java");
+			Path symbolicJavaDir = Paths.get(gitRepo.getPath(), "facets", "maven", "java");
+			Files.createSymbolicLink(symbolicJavaDir, javaDir);
+		} catch (IOException e1) {
+			log.error("Failed to create symbolic link for java source");
+		}
+		
+		// Create .gitignore file
+		Path gitIgnore = Paths.get(gitRepo.getPath(), "facets", "maven", ".gitignore");
+		List<String> ignoredPatterns = List.of(
+				"src/main/java/",
+				"target/"
+			);
+		
+		for (String pattern : ignoredPatterns) {
+			try {
+				Files.write(gitIgnore, 
+						(pattern + "\n").getBytes(), 
+						StandardOpenOption.APPEND, StandardOpenOption.CREATE);
+			} catch (IOException e) {
+				log.error("Failed to write to .gitignore", e);
+			}
+
+		}
 		
 		Properties properties = new Properties();
 		properties.setProperty("maven.compiler.target", "11");
@@ -325,12 +357,11 @@ public class MavenConfigurationService implements Serializable {
 		File pomFile = new File(repositoryDir, "/facets/maven/pom.xml");
 
 		try {
-			pomFile.getParentFile().mkdirs();
 			
 			MavenXpp3Writer xmlWriter = new MavenXpp3Writer();
 			try (FileWriter fileWriter = new FileWriter(pomFile)) {
 				xmlWriter.write(fileWriter, model);
-				gitClient.commitFiles(repository, Collections.singletonList(pomFile), message);
+				gitClient.commitFiles(repository, List.of(pomFile, gitIgnore.toFile()), message);
 			}
 
 		} catch (IOException e) {
